<resources>
    <string name="app_name">APCUPSD Monitor</string>
    <string name="stats">Stats</string>
    <string name="loading">LOADING</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="donate">Donate</string>
    <string name="donate_more">Donate (More)</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="not_enough_data_yet">Not enough data yet</string>
    <string name="delete_item">Delete item</string>
    <string name="delete_item_message">Are you sure you want to delete this UPS item?</string>
    <string name="no_ups_devices_title">No UPS devices</string>
    <string name="no_ups_devices_message">To configure your first UPS device, close this dialog and click right bottom corner add UPS floating button.</string>
    <string name="trust_host">Trust host</string>
    <string name="with_following_key_fingerprint">with following key finger print:</string>
    <string name="host_fingerprint_message">You must either accept host fingerprint or disable strict host key checking from app settings</string>
    <string name="missing_settings">Missing settings</string>
    <string name="ssh_connection_properties_not_set_message">SSH Connection properties are not set yet or not set properly. Check your preferences. You must provide at least server address, username and either password or private key depending on your server ssh setup.</string>
    <string name="open_settings">Open settings</string>
    <string name="command_error_result">Command error. Result:</string>
    <string name="copy_content">Copy content</string>
    <string name="content_copied">Content copied to clipboard</string>
    <string name="nothing_to_copy">There was nothing to copy</string>
    <string name="connection_error_one">Connection error. Verify your address, port, username, password/private key.</string>
    <string name="connection_error_two">If target is remove server, ensure that it has specified port available (port forwarding).</string>
    <string name="connection_error_three">Target server has apcupsd daemon running and for example command</string>
    <string name="connection_error_four">is working.\n\n</string>
    <string name="connection_error_five">In case you are using direct APCUPSD TCP port connection, see setup tutorial for testing connection.</string>
    <string name="add_new_ups">Add new ups</string>
    <string name="connection_type">Connection type</string>
    <string name="off_ssh_on_apcupsd_tcp_port">Options are SSH, APCUPSD TCP PORT, Eaton IPM, NUT or Google Review</string>
    <string name="server_address">Server address</string>
    <string name="server_ip_or_domain_address">Server ip or domain address</string>
    <string name="server_port">Server port</string>
    <string name="ssh_default_port_is_22_apcupsd_default_tcp_port_is_3551">SSH default port is 22. APCUPSD default tcp port is 3551. Eaton IPM HTTPS 4680 and HTTP 4679. NUT server default port is 3493.</string>
    <string name="port_to_use_for_connection">Port to use for connection</string>
    <string name="server_username_ssh">Server username</string>
    <string name="ssh_server_username">Server username (SSH, IPM etc)</string>
    <string name="server_password_ssh">Server password</string>
    <string name="ssh_server_password">Server password (SSH, IPM etc)</string>
    <string name="private_key_authentication_ssh">Private key authentication (SSH)</string>
    <string name="if_enabled_ssh_connection_uses_private_key">If enabled, ssh connection uses private key instead of password. This is far more secure option</string>
    <string name="private_key_passphrase_ssh">Private key passphrase (SSH)</string>
    <string name="if_key_has_password_otherwise_leave_blank">If key has password, otherwise leave blank</string>
    <string name="give_your_private_key_passphrase">Give your private key passphrase</string>
    <string name="private_key_location_ssh">Private key location (SSH)</string>
    <string name="path_to_your_private_key_stored_on_your_phones_memory">Path to your private key stored on your phones memory</string>
    <string name="select_file">Select file</string>
    <string name="strict_host_key_checking_ssh">Strict host key checking (SSH)</string>
    <string name="asks_user_to_verify_connection_host_at_first_time">Asks user to verify connection host at first time before connecting. For security, keep enabled</string>
    <string name="status_command_ssh">Status command (SSH)</string>
    <string name="load_events">Load events</string>
    <string name="if_switched_off_then_events_wont_be_loaded">If switched off then events wont be loaded and also its view wont be visible</string>
    <string name="events_location_ssh">Events location (SSH)</string>
    <string name="open_automatically">Open automatically</string>
    <string name="open_detailed_info_view_automatically">Open detailed info view automatically for this UPS after status update. Toggle on will override earlier UPS selection.</string>
    <string name="saved">Saved</string>
    <string name="path">Path</string>
    <string name="ups_editor_create_new">UPS Editor (Create new)</string>
    <string name="ups_editor_update_existing">UPS Editor (Update existing)</string>
    <string name="private_key_file_imported_success">Private key file imported.</string>
    <string name="private_key_file_imported_failed">Failed to import private key file.</string>
    <string name="ups_enabled">UPS Enabled</string>
    <string name="ups_enable_toggle_description">UPS can be disabled momentarily if its not connected. Update process will then skip this UPS.</string>
    <string name="use_https">Use HTTPS</string>
    <string name="http_https_connection_description">HTTPS uses secure encrypted communication channel which is recommended way. With HTTPS you will need valid certificate. Use cleartext HTTP only as last option.</string>
    <string name="apcupsd_nis">APCUPSD NIS</string>
    <string name="eaton_ipm">Eaton IPM</string>
    <string name="nut">NUT</string>
    <string name="google_review">Google Review</string>
    <string name="node_id_ipm">Node ID (IPM)</string>
    <string name="node_id_eaton_ipm_hint">Node id for Eaton IPM like UW222A0123</string>
    <string name="server_address_hint_text">NUT address is defined with UPS name@address like: dummy@192.168.1.100</string>
    <string name="display_name">Display name</string>
    <string name="display_name_description">If display name is provided then display name replaces data provided UPS name</string>
    <string name="m">M</string>
    <string name="model">Model</string>
    <string name="lv">LV</string>
    <string name="line_voltage">Line voltage</string>
    <string name="bv">BV</string>
    <string name="battery_voltage">Battery voltage</string>
    <string name="it">IT</string>
    <string name="internal_temperature">Internal temperature</string>
    <string name="lpercent">L%</string>
    <string name="load_percentage">Load percentage</string>
    <string name="cl">CL</string>
    <string name="battery_charge_level">Battery charge level</string>
    <string name="tr">TR</string>
    <string name="last_transfer_reason">Last transfer reason</string>
    <string name="tl">TL</string>
    <string name="battery_time_left">Battery time left</string>
    <string name="bd">BD</string>
    <string name="battery_date">Battery date</string>
    <string name="fw">FW</string>
    <string name="firmware_version">Firmware version</string>
    <string name="st">ST</string>
    <string name="start_time">Start time</string>
    <string name="strreturn">Return</string>
    <string name="t">T</string>
    <string name="total_time_out">Total time out</string>
    <string name="a">A</string>
    <string name="average_time_out">Average time out</string>
    <string name="events">Events</string>
    <string name="self_test">Self test</string>
    <string name="seconds_month">Seconds /month</string>
    <string name="showing_power_autage_total_seconds">Showing power outage total seconds for each available month</string>
    <string name="you_dont_have_events_to_use">You don\'t yet have events to use for calculating statistics.</string>
    <string name="debug_output">Debug output</string>
    <string name="debug_output_is_null">Debug output is null</string>
    <string name="ups_disabled">DISABLED</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="prefs_title">Settings</string>
    <string name="general_settings">General settings</string>
    <string name="order_by">UPS list order by</string>
    <string name="order_by_summary">Choose how to order UPS listing</string>
    <string name="order_by_id">UPS ID</string>
    <string name="order_by_display_name_asc">Display name ascending</string>
    <string name="order_by_display_name_desc">Display name descending</string>
    <string name="configure_displayed_main_screen_items">Configure displayed main screen items</string>
    <string name="prefs_configure_display_items">Configure displayed details items</string>
    <string name="prefs_ups_nam_title">Set UPS name as activity title</string>
    <string name="prefs_ups_model">Show UPS model</string>
    <string name="prefs_line_voltage">Show line voltage</string>
    <string name="prefs_batt_voltage">Show battery voltage</string>
    <string name="prefs_internal_temp">Show internal temperature</string>
    <string name="prefs_load_percentage">Show load percentage</string>
    <string name="prefs_percent_batt_charge">Show percent battery charge</string>
    <string name="prefs_last_transfer_reason">Show last transfer reason</string>
    <string name="prefs_batt_time_left">Show battery time left</string>
    <string name="prefs_batt_date">Show battery date</string>
    <string name="prefs_firmware_version">Show firmware version</string>
    <string name="prefs_start_time">Show start time</string>
    <string name="prefs_statistics">Statistics</string>
    <string name="prefs_events_date_format">Events date format</string>
    <string name="prefs_events_time_format">Events time format</string>
    <string name="prefs_events_date_format_summary">If your events has date format which is not specified here, please contact me via email so I can implement support for it.</string>
    <string name="prefs_events_time_format_summary">If your events has time format which is not specified here, please contact me via email so I can implement support for it.</string>
    <string name="prefs_events_coloring">Events coloring</string>
    <string name="prefs_events_coloring_summary">False = Text colored, True = Background colored</string>
    <string name="prefs_service">Service</string>
    <string name="prefs_notification_service">Notification service</string>
    <string name="prefs_notification_service_summary">Check UPS statuses in the background</string>
    <string name="prefs_service_refresh_interval">Refresh interval</string>
    <string name="prefs_service_refresh_interval_summary">Load status information every X minutes. Zero means smallest possible value five minutes.</string>
    <string name="prefs_dark_theme_title">Dark theme</string>
    <string name="prefs_dark_theme_description">After change, please restart the application</string>
    <string name="warning">Warning</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate_app">Rate app</string>
    <string name="menu_ups_viewer_refresh">Refresh</string>
    <string name="menu_ups_viewer_statistics">Statistics</string>
    <string name="menu_ups_viewer_debug_output">Debug output</string>
    <string name="toggle_web_interface">Toggle web interface</string>
</resources>