<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_ups_viewer_refresh"
        app:showAsAction="ifRoom"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/action_web_view"
        android:icon="@drawable/ic_error_small"
        android:title="@string/toggle_web_interface"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction,HardcodedText" />

    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/menu_ups_viewer_statistics"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction,HardcodedText" />

    <item
        android:id="@+id/action_debug_output"
        android:title="@string/menu_ups_viewer_debug_output"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

</menu>
