<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="2dp"
        card:cardCornerRadius="1dp"
        card:cardElevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bootStrapSuccess"
                android:padding="5dp"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="5dp">

                    <TextView
                        android:id="@+id/name"
                        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="UPS Name"
                        android:fontFamily="monospace"/>


                    <LinearLayout
                        android:id="@+id/upsModelLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Model"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/model"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="-"
                            android:textAlignment="textEnd"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lineVoltageLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lineVoltage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Line voltage" />

                        <TextView
                            android:id="@+id/lineVoltageOnly"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="0.0"
                            android:textAlignment="textEnd"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/batteryVoltageLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/batteryVoltage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Battery voltage" />

                        <TextView
                            android:id="@+id/batteryVoltageOnly"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="0.0"
                            android:textAlignment="textEnd"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/internalTemperatureLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/internal_temperature" />

                        <TextView
                            android:id="@+id/internalTemperature"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="N/A"
                            android:textAlignment="textEnd"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/batteryLoadPercentageLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/loadPercent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/load_percentage" />

                        <ProgressBar
                            android:id="@+id/loadPercentPB"
                            style="?android:progressBarStyleHorizontal"
                            android:layout_width="80dp"
                            android:layout_height="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:progressDrawable="@drawable/progressbar" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/batteryTimeLeftLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/batteryTimeLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/battery_time_left" />
                    </LinearLayout>

                </LinearLayout>


                <FrameLayout
                    android:id="@+id/chargePercentageFrameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.nitramite.apcupsdmonitor.CustomGauge
                        android:id="@+id/chargePB"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        app:gaugeEndValue="100"
                        app:gaugePointEndColor="@color/colorPrimary"
                        app:gaugePointStartColor="@color/colorPrimary"
                        app:gaugeStartAngle="135"
                        app:gaugeStartValue="0"
                        app:gaugeStrokeCap="ROUND"
                        app:gaugeStrokeColor="@color/md_grey_400"
                        app:gaugeStrokeWidth="10dp"
                        app:gaugeSweepAngle="270" />


                    <TextView
                        android:id="@+id/percentageTv"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="0%"
                        android:textStyle="bold"
                        android:fontFamily="monospace"
                        android:textSize="20sp"/>


                </FrameLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>